--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.119.0"
+fastapi = {extras = ["standard"], version = "^0.119.0"}
 
 
 [build-system]
