--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = {extras = ["standard"], version = "^0.119.0"}
+fastapi = {extras = ["standard"], version = "^0.119.1"}
+pydantic-settings = "^2.11.0"
+sqlalchemy = "^2.0.44"
+asyncpg = "^0.30.0"
 
 
 [build-system]
